2008-11-27  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-image.c (load_svg):
	* examples/example-5.c:
	* examples/example-5.svg:
	Use the jimmac-single-canvas-plates-approach to render sub-elements.

2008-11-27  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-background-parser.c (background_inherit):
	* ccss-cairo/ccss-border-parser.c (border_color_inherit),
	(border_style_inherit), (border_width_inherit),
	(border_side_inherit_impl), (border_left_inherit),
	(border_top_inherit), (border_right_inherit),
	(border_bottom_inherit), (border_inherit), (border_radius_inherit):
	* ccss-doc/tmpl/property.sgml:
	* ccss/ccss-property.h:
	* ccss/ccss-stylesheet.c (inherit_container_style):
	Do not inherit properties that are themselves of state `inherit'.

2008-11-27  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-border-parser.c (border_color_factory),
	(border_color_inherit), (border_style_factory),
	(border_style_inherit), (border_width_factory),
	(border_width_inherit), (border_factory_impl),
	(border_radius_factory):
	* ccss-cairo/ccss-cairo-property.c
	(ccss_property_border_bottom_left_radius),
	(ccss_property_border_bottom_right_radius):
	Fix left/right border-radius mapping mixup.

2008-11-27  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-background-parser.c (background_factory),
	(background_inherit):
	* ccss-cairo/ccss-background-parser.h:
	* ccss-cairo/ccss-border-parser.c (border_color_factory),
	(border_style_factory), (border_width_factory),
	(border_factory_impl), (border_side_inherit_impl),
	(border_left_inherit), (border_top_inherit),
	(border_right_inherit), (border_bottom_inherit), (border_inherit),
	(border_radius_factory), (border_radius_inherit):
	* ccss-cairo/ccss-border-parser.h:
	Fix style inheritance for `border'.

2008-11-26  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-background-parser.c (background_factory):
	* ccss/ccss-style.c (ccss_style_get_double),